--- a/templates/email.html
+++ b/templates/email.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- email.html -->
+<!DOCTYPE html>
 <html>
 
 </head>
-
 <body>
 <p>
-    Hello {{.Name}}
+    Hello {{.FirstName}} {{.LastName}}
     <a href="{{.URL}}">Confirm email address</a>
 </p>
     
